--- a/client/page/home/main.scss
+++ b/client/page/home/main.scss
@@ -1,7 +1,7 @@
 body {
-  color: #fff;
+  color: red;
   background-color: #aaa;
   div {
-    background-color: #aaa;
+    background-color: #eee;
   }
 }
