--- a/client/page/home/lib/main.css
+++ b/client/page/home/lib/main.css
@@ -1,5 +1,5 @@
 body {
-  color: #fff;
+  color: red;
   background-color: #aaa; }
   body div {
-    background-color: #aaa; }
+    background-color: #eee; }
